--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,13 @@ dependencies = [
     "pwdlib[argon2]>=0.3.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pyjwt>=2.11.0",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
+]
+
+[dependency-groups]
+dev = [
+    "colorlog>=6.10.1",
 ]
