--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,21 @@ requires-python = ">=3.14"
 dependencies = [
     "alembic>=1.18.3",
     "asyncpg>=0.30.0",
+    "cloudinary>=1.44.1",
     "email-validator>=2.3.0",
     "fastapi>=0.128.5",
     "greenlet>=3.3.1",
     "httpx>=0.28.0",
+    "langchain>=1.2.10",
+    "langchain-openai>=1.1.10",
     "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pyjwt>=2.11.0",
+    "pymupdf>=1.27.1",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.22",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
 ]
