--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "httpx>=0.28.0",
     "langchain>=1.2.10",
     "langchain-openai>=1.1.10",
+    "langgraph>=1.0.9",
     "psycopg2-binary>=2.9.11",
     "pwdlib[argon2]>=0.3.0",
     "pydantic>=2.12.5",
